ui router added

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 	<h1>Hackernews App</h1>
 
 	<input ng-model="name"> {{ name }}
+	<ui-view></ui-view>
 
 
 	<script src="js/angular.js"></script>
+	<script src="js/angular-ui-router.js"></script>
 	<script src="js/app/app.js"></script>
 	<script src="js/app/controllers/AppController.js"></script>
 </body>
