add ng-cloak, page switch working

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
       <link rel="stylesheet" href="app.css" />
   </head>
-  <body ng-app="app">
+  <body ng-app="app" ng-cloak>
 
     <a href="" ui-sref="top" ui-sref-active="active">Top</a>
 
