apply default route

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<title>Angular Application</title>
 
-      <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="app.css" />
   </head>
   <body ng-app="app" ng-cloak>
 
-    <a href="" ui-sref="top" ui-sref-active="active">Top</a>
+    <a href="" ui-sref="top" ui-sref-active="active">Home</a>
 
     <ui-view> </ui-view>
-
 
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
