add DateService to PostController

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <script src="js/app/directives/CommentComponent.js"></script>
     <script src="js/app/directives/PostsComponent.js"></script>
     <script src="js/app/services/HttpService.js"></script>
+    <script src="js/app/services/DateService.js"></script>
   </body>
 </html>
