--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
-<h1><a ui-sref="home">hacker news</a></h1>
+<h1><a ui-sref="top">hacker news</a></h1>
 
 <ui-view></ui-view>
 
