router installed and works

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 	<script src="js/angular.min.js"></script>
 	<script src="js/angular-route.js"></script>
+	<script src="js/angular-ui-router.js"></script>
 	
 	<!-- Modules -->
 	<script src="js/app/app.js"></script>
