--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@
   <link rel="stylesheet" href="app.css" />
 
 </head>
-<body ng-app="HackerNews">
+<body>
 	
-	<div class="main">
+	<div ng-app="HackerNews" class="main">
 		<div class="container">
-			<div ng-view>
-				
-			</div>
+			<div ng-view></div>
 		</div>
 	</div>
 
 	<script src="js/angular.min.js"></script>
-	<script src="js/angular-route.js"></script>
 	<script src="js/angular-ui-router.js"></script>
 	
 	<!-- Modules -->
