--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head>
+<head ng-app="app">
 	<meta charset="utf-8">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,5 +12,6 @@
 
 <script src="js/angular.js"></script>
 <script src="js/angular-ui-router.js"></script>
+<script src="js/app/app.js"></script>
 </body>
 </html>
