--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body ng-app="app">
+	This is index.html
+	<ui-view></ui-view>
 
 	<script src="js/angular.js" charset="utf-8"></script>
 	<script src="js/angular-ui-router.js" charset="utf-8"></script>
