--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 	<script src="js/angular.js" charset="utf-8"></script>
 	<script src="js/angular-ui-router.js" charset="utf-8"></script>
 	<script src="js/app/app.js" charset="utf-8"></script>
+	<script src="js/app/services/getStories.js" charset="utf-8"></script>
 </body>
 </html>
