Moved services directory into app directory. Created rootController function/controller.

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 	<script src="js/angular-ui-router.js" charset="utf-8"></script>
 	<script src="js/app/app.js" charset="utf-8"></script>
 	<script src="js/app/services/getStories.js" charset="utf-8"></script>
+	<script src="js/app/controllers/rootController.js" charset="utf-8"></script>
 </body>
 </html>
