--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Angular Application</title>
+	<title>Hacker News</title>
 
     <link rel="stylesheet" href="app.css" />
 </head>
@@ -12,6 +12,7 @@
 
 <script src="js/angular.js"></script>
 <script src="js/angular-ui-router.js"></script>
+<script src="js/angular-sanitize.js"></script>
 <script src="js/app/app.js"></script>
 </body>
 </html>
