--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head ng-app="app">
+<head>
 	<meta charset="utf-8">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,9 +10,14 @@
 </head>
 <body>
 
+<div ng-app="app" class="app">
+
+</div>
+
 <script src="js/angular.js"></script>
 <script src="js/angular-ui-router.js"></script>
 <script src="js/angular-sanitize.js"></script>
 <script src="js/app/app.js"></script>
+<script src="js/app/services/PostsService.js"></script>
 </body>
 </html>
