--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 <body>
 
 <div ng-app="app" class="app">
+	<header class="header">
+		<div class="header__fixed">
+			<a ui-sref="top" ui-sref-active="active">Hacker News</a>
+		</div>
+	</header>
 
+	<div ui-view></div>
 </div>
 
 <script src="js/angular.js"></script>
@@ -19,5 +25,6 @@
 <script src="js/angular-sanitize.js"></script>
 <script src="js/app/app.js"></script>
 <script src="js/app/services/PostsService.js"></script>
+<script src="js/app/controllers/TopStoriesController.js"></script>
 </body>
 </html>
