Create post controller and add script to layout

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 <script src="js/app/app.js"></script>
 <script src="js/app/services/PostsService.js"></script>
 <script src="js/app/controllers/TopStoriesController.js"></script>
+<script src="js/app/controllers/PostController.js"></script>
 </body>
 </html>
