--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 <script src="js/app/services/PostsService.js"></script>
 <script src="js/app/controllers/TopStoriesController.js"></script>
 <script src="js/app/controllers/PostController.js"></script>
+<script src="js/app/components/comment.js"></script>
 </body>
 </html>
