--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script src="js/app/factories/TopStories.js" charset="utf-8"></script>
 	<script src="js/app/controllers/HomeController.js" charset="utf-8"></script>
 	<script src="js/app/filters/paginationFilter.js" charset="utf-8"></script>
+	<script src="js/app/components/story.js" charset="utf-8"></script>
 	<script src="js/app/app.js" charset="utf-8"></script>
 </body>
 </html>
