Add and register StoryController.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script src="js/angular-ui-router.js" charset="utf-8"></script>
 	<script src="js/app/factories/TopStories.js" charset="utf-8"></script>
 	<script src="js/app/controllers/HomeController.js" charset="utf-8"></script>
+	<script src="js/app/controllers/StoryController.js" charset="utf-8"></script>
 	<script src="js/app/filters/paginationFilter.js" charset="utf-8"></script>
 	<script src="js/app/components/story.js" charset="utf-8"></script>
 	<script src="js/app/app.js" charset="utf-8"></script>
