Add and register comment component.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<script src="js/app/controllers/StoryController.js" charset="utf-8"></script>
 	<script src="js/app/filters/paginationFilter.js" charset="utf-8"></script>
 	<script src="js/app/components/story.js" charset="utf-8"></script>
+	<script src="js/app/components/comment.js" charset="utf-8"></script>
 	<script src="js/app/app.js" charset="utf-8"></script>
 </body>
 </html>
