--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 	<script src="js/angular.js" charset="utf-8"></script>
 	<script src="js/angular-ui-router.js" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.8/angular-sanitize.min.js" charset="utf-8"></script>
 	<script src="js/app/factories/TopStories.js" charset="utf-8"></script>
 	<script src="js/app/controllers/HomeController.js" charset="utf-8"></script>
 	<script src="js/app/controllers/StoryController.js" charset="utf-8"></script>
