--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body ng-app="app">
-	This is index.html
+	<header class="header">
+	 <div class="header__fixed">
+	   <ul>
+	     <li>
+	       <a ui-sref="home" ui-sref-active="active">Hacker News Stories</a>
+	     </li>
+	   </ul>
+	 </div>
+	</header>
 	<ui-view></ui-view>
 
 	<script src="js/angular.js" charset="utf-8"></script>
