--- a/index.html
+++ b/index.html
@@ -10,5 +10,23 @@
 </head>
 <body>
 
+	<div ng-app="app">		
+
+		<ui-view></ui-view>
+
+	</div>
+
 </body>
+<script src="js/angular.js"></script>
+<script src="js/app/app.js"></script>
+<script src="js/angular-ui-router.js"></script>
+<script src="js/angular-sanitize.js"></script>
+<script src="js/app/controllers/NewsController.js"></script>
+<script src="js/app/controllers/PostController.js"></script>
+<script src="js/app/controllers/ItemController.js"></script>
+<script src="js/app/controllers/CommentController.js"></script>
+<script src="js/app/services/NewsService.js"></script>
+<script src="js/app/components/Pagination.js"></script>
+<script src="js/app/components/Item.js"></script>
+<script src="js/app/components/Comment.js"></script>
 </html>
