--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
-  
+<div ng-app="app" ui-sref-active="active" class="active">
+  <ui-view></ui-view>
+</div>
 </body>
 </html>
