--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
-<div ng-app="app" ui-sref-active="active" class="active">
-  <ui-view></ui-view>
-</div>
+  <h1>You are here!</h1>
+  <div ng-app="app" ui-sref-active="active" class="active">
+    <ui-view></ui-view>
+  </div>
+
+<script src="js/angular.js"></script>
+<script src="tests/angular-ui-router.js"></script>
+<script src="js/app/app.js"></script>
+<script src="js/app/controllers/NewsController.js"></script>
+
 </body>
 </html>
+
