--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Angular Application</title>
 
-    <link rel="stylesheet" href="app.css" />
+	<link rel="stylesheet" href="app.css" />
 </head>
+
 <body>
 
+	<script src="js/angular.js"></script>
+	<script src="js/angular-ui-router.js"></script>
+	<script src="js/angular-sanitize.js"></script>
+	<script src="js/app/app.js"></script>
+	<script src="js/app/controllers/PostsController.js"></script>
+	<script src="js/app/controllers/TopStoriesController.js"></script>
+
 </body>
+
 </html>
