--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
 <body>
 
+	<div class="app" ng-app="app">
+		<div ui-view></div>
+	</div>
+
 	<script src="js/angular.js"></script>
 	<script src="js/angular-ui-router.js"></script>
 	<script src="js/angular-sanitize.js"></script>
