--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <h1>Mini Hacker News!</h1>
   <div ng-app="app" ui-sref-active="active" class="active">
     <a href="" ui-sref="top" ui-sref-active="active">Posts</a>
+    <!-- ng-repeat for all the posts and each should have a ui sref that point to each post -->
+    
     <ui-view></ui-view>
   </div>
 
