--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <h1>Mini Hacker News!</h1>
-  <div ng-controller="NewsController as ctrl">
-    <button ng-click="call()">Calling Call</button>
+  <div ng-controller="news">
+    <button ng-click="call">Calling Call</button>
     </div>
   <div ng-app="app" ui-sref-active="active" class="active">
     <a href="" ui-sref="top" ui-sref-active="active">Posts</a>
