--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 	<script src="js/angular-ui-router.js"></script>
 	<script src="js/angular-sanitize.js"></script>
 	<script src="js/app/app.js"></script>
+	<script src="js/app/components/Item.js"></script>
 	<script src="js/app/controllers/PostsController.js"></script>
 	<script src="js/app/controllers/TopStoriesController.js"></script>
+	<script src="js/app/services/PostsService.js"></script>
 
 </body>
 
