--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 
 <body>
 
-	<div class="app" ng-app="app">
+	<div ng-app="app" class="app">
+		<header class="header">
+			<div class="header__fixed">
+				<ul>
+					<li>
+						<a ui-sref="top" ui-sref-active="active">Top Stories</a>
+					</li>
+				</ul>
+			</div>
+		</header>
 		<div ui-view></div>
 	</div>
 
