--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>Mini Hacker News!</h1>
-  <div ng-controller="news">
+  <div ng-controller="NewsController">
     <button ng-click="call">Calling Call</button>
     </div>
   <div ng-app="app" ui-sref-active="active" class="active">
