--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 </head>
 <body>
   <h1>Mini Hacker News!</h1>
-  <div ng-controller="NewsController">
     <button ng-click="call">Calling Call</button>
-    </div>
   <div ng-app="app" ui-sref-active="active" class="active">
     <a href="" ui-sref="top" ui-sref-active="active">Posts</a>
-    <!-- ng-repeat for all the posts and each should have a ui sref that point to each post -->
     
+    <!-- post.html and posts.html get rendered in here -->
     <ui-view></ui-view>
   </div>
 
