--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <script src="tests/angular-sanitize.js"></script>
 <script src="js/app/app.js"></script>
 <script src="js/app/controllers/NewsController.js"></script>
+<script src="js/app/controllers/PostController.js"></script>
+<script src="js/app/controllers/CommentController.js"></script>
 <script src="js/app/services/NewsService.js"></script>
 
 </body>
