--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
   <h1>Mini Hacker News!</h1>
-    <button ng-click="call">Calling Call</button>
   <div ng-app="app" ui-sref-active="active" class="active">
     <a href="" ui-sref="top" ui-sref-active="active">Posts</a>
     
@@ -26,6 +25,7 @@
 <script src="js/app/controllers/PostController.js"></script>
 <script src="js/app/controllers/CommentController.js"></script>
 <script src="js/app/directives/Comment.js"></script>
+<script src="js/app/directives/Post.js"></script>
 <script src="js/app/services/NewsService.js"></script>
 
 </body>
