--- a/index.html
+++ b/index.html
@@ -9,15 +9,27 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body ng-app="app" class="app">
-<a ui-sref="top" ui-sref-active="active">Top Stories</a>
+  <div class="header">
+    <div class="header__fixed">
+      <ul>
+        <li>
+          <a ui-sref="top" ui-sref-active="active">Top Stories</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
 
 <div ui-view></div>
 
   <script src="js/angular.js"></script>
   <script src="js/angular-ui-router.js"></script> 
+  <script src="js/angular-sanitize.min.js"></script>
   <script src="js/app/app.js"></script>
-  <script src="js/app/services/TopStoriesService.js"></script>
+  <script src="js/app/components/Item.js"></script>
   <script src="js/app/controllers/TopStoriesController.js"></script>
-  <script src="js/app/controllers/PostController.js"></script>
+  <script src="js/app/controllers/PostsController.js"></script>
+  <script src="js/app/services/PostsService.js"></script>
+
 </body>
 </html>
