--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
-  
+
   <div ng-app="app" class="app">
+    <ui-view></ui-view>
   </div>
 
 
@@ -20,6 +21,7 @@
 
         <script src="js/angular.js"></script>
         <script src="js/angular-ui-router.js"></script>
+        <script src="js/angular-sanitize.js"></script>
         <script src="js/app/app.js"></script>
         <script src="js/app/components/Item.js"></script>
         <script src="js/app/controllers/PostController.js"></script>
