--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
   <div ng-app="app" class="app">
+    <a ui-sref="top" ui-sref-active="active">Top Stories</a>
     <ui-view></ui-view>
   </div>
 
