--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
+  <div ng-app="app">
+    <h2>Hello World</h2>
+    <div ui-view></div>
 
+  </div>
+
+  <script src="js/angular.js"/>
+  <script src="js/angular-ui-router.js"/>
+  <script src="js/angular-sanitize.js"/>
+  <script src="js/app/app.js"/>
+  <script src="js/app/components/item.js"/>
+  <script src="js/app/controllers/PostController.js"/>
+  <script src="js/app/controllers/TopStoriesController.js"/>
+  <script src="js/app/services/PostsService.js"/>
 </body>
 </html>
