--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
 <!doctype html>
 <html>
-<head>
-	<meta charset="utf-8">
+  <head>
+  	<meta charset="utf-8">
 
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Angular Application</title>
+  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  	<title>Angular Application</title>
 
-    <link rel="stylesheet" href="app.css" />
-</head>
-<body ng-app="app">
-  <div>
-    <h2>This is outside of "ui-view"</h2>
-    <div ui-view></div>
+      <link rel="stylesheet" href="app.css" />
+  </head>
+  <body>
 
-  </div>
+    <div ng-app="app" class="app">
+        <header class="header">
+            <div class="header__fixed">
+                <ul>
+                    <li>
+                        <a ui-sref="top" ui-sref-active="active">Top Stories</a>
+                    </li>
+                </ul>
+            </div>
+        </header>
 
-  <script src="js/angular.js" type="text/javascript"> </script>
+        <div ui-view></div>
+    </div>
 
-  <script src="js/angular-ui-router.js" type="text/javascript"> </script>
+    <script src="js/angular.js" type="text/javascript"> </script>
+    <script src="js/angular-ui-router.js" type="text/javascript"> </script>
+    <script src="js/angular-sanitize.js" type="text/javascript"> </script>
+    <script src="js/app/app.js" type="text/javascript"> </script>
+    <script src="js/app/components/item.js" type="text/javascript"> </script>
+    <script src="js/app/controllers/PostController.js" type="text/javascript"> </script>
+    <script src="js/app/controllers/TopStoriesController.js" type="text/javascript"> </script>
+    <script src="js/app/services/PostsService.js" type="text/javascript"> </script>
 
-  <script src="js/angular-sanitize.js" type="text/javascript"> </script>
-
-  <script src="js/app/components/item.js" type="text/javascript"> </script>
-
-  <script src="js/app/controllers/PostController.js" type="text/javascript"> </script>
-
-  <script src="js/app/controllers/TopStoriesController.js" type="text/javascript"> </script>
-
-  <script src="js/app/services/PostsService.js" type="text/javascript"> </script>
-
-  <script src="js/app/app.js" type="text/javascript"> </script>
-  
-</body>
+  </body>
 </html>
