--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 <h1>Hacker News</h1>
 
   <div ng-app="app" class="app">
-    <div ng-controller="StoryController as top">
       <div ui-view></div>
-    </div>
   </div>
+
+<script src="js/angular.js"></script>
+<script src="js/angular-route.js"></script>
+<script src="js/angular-ui-router.js"></script>
+<script src="js/app/app.js"></script>
+<script src="js/app/services/TopService.js"></script>
 
 </body>
 </html>
