--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   </div>
 
 <script src="js/angular.js"></script>
-<script src="js/angular-route.js"></script>
+<script src="js/angular-sanitize.js"></script>
 <script src="js/angular-ui-router.js"></script>
 <script src="js/app/app.js"></script>
+<script src="js/app/controllers/PostController.js"></script>
+<script src="js/app/controllers/TopController.js"></script>
 <script src="js/app/services/TopService.js"></script>
 
 </body>
