--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 
   <script src="js/angular.js"></script>
   <script src="js/angular-ui-router.js"></script>
+  <script src="js/angular-sanitize.js"></script>
   <script src="js/app/app.js"></script>
   <script src="js/app/controllers/TopStoriesController.js"></script>
   <script src="js/app/services/TopStoriesService.js"></script>
   <script src="js/app/controllers/PostController.js"></script>
   <script src="js/app/services/PostService.js"></script>
-  <script src="js/app/components/TopStoriesComponent.js"></script>
+  <script src="js/app/components/story.js"></script>
+  <script src="js/app/components/comment.js"></script>
 </body>
 </html>
