--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
+<div ng-view></div>
+</div>
 
+<script src="js/angular.js"></script>
+<script src="js/angular-ui-router.js"></script>
+<script src="js/app/app.js"></script>
+<script src="js/app/controllers/TopStoriesController.js"></script>
+<script src="js/app/services/TopStoriesService.js"></script>
 </body>
 </html>
