--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	<meta charset="utf-8">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Angular Application</title>
+	<title>Hacker News</title>
 
     <link rel="stylesheet" href="app.css" />
 </head>
-<body>
 
+<body ng-app="myApp">
+	<h1>This is our Angular Application</h1>
 </body>
 </html>
