--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
 
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Hacker News</title>
-
-    <link rel="stylesheet" href="app.css" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Angular Application</title>
 </head>
+<body>
+  <div ng-app="app">
+    <div ng-controller="TopController as top">
+      <h2>{{ top.name }}</h2>
+    </div>
+  </div>
 
-<body ng-app="myApp">
-	<h1>This is our Angular Application</h1>
+    <script src="js/angular.js"></script>
+    <script src="js/app/app.js"></script>
+    <script src="js/app/controllers/TopController.js"></script>
+
 </body>
 </html>
