basic view with directive to display all json story data output

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
-<div ng-view></div>
+	<div ng-app="app" class="app">
+		test
+    <div ui-view></div>
 </div>
 
 <script src="js/angular.js"></script>
