--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
+	<meta charset="utf-8">
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Angular Application</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Hacker News Clone</title>
+
+    <link rel="stylesheet" href="app.css" />
 </head>
 <body>
-  <div ng-app="app">
-    <div ng-controller="TopController as top">
-      <h2>{{ top.name }}</h2>
-    </div>
-  </div>
 
-    <script src="js/angular.js"></script>
-    <script src="js/app/app.js"></script>
-    <script src="js/app/controllers/TopController.js"></script>
-
+<script src="js/angular.min.js"></script>
+<script src="js/angular-ui-router.js"></script>
+<script src="js/angular-sanitize.js"></script>
+<script src="js/app/app.js"></script>
 </body>
 </html>
