--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -9,21 +9,39 @@
 </head>
 <body>
 	<div ng-app="app" class="app">
-		<a href="" ui-sref="top">Top Stories!</a>
-		<ul>
-			<li ng-repeat="story in ctrl.stories">{{story}}</li>
-		</ul>
-		<div ui-view>
+		<header class="header">
+			<div class="header__fixed">
+				+<ul class="posts">
+ 	<li ng-repeat="post in top.posts">
+ 		<item id="post"></item>
+ 	</li>
+ </ul>
+ 
+ <div>
+ 	<ul class="pagination">
+ 		<li ng-if="top.page > 0">
+ 			<a href="" ng-click="top.previousPage()">
+ 				<< Previous
+ 			</a>
+ 		</li>
+ 		<li ng-if="top.page < top.totalPages - 1">
+ 			<a href="" ng-click="top.nextPage()">
+ 				Next >>
+ 			</a>
+ 		</li>
+ 	</ul>
+ 
+ 	<div style="clear: both;"></div>
+ </div>
 
-		</div>
-
-	</div>
-
-<script src="/js/angular.js"></script>
+<script src="js/angular.js"></script>
+<script src="js/angular-ui-router.js"></script>
+<script src="js/angular-sanitize.js"></script>
 <script src="js/app/app.js"></script>
-<script src="/js/angular-ui-router.js"></script>
-<script src="js/app/controllers/StoryController.js"></script>
+<script src="js/app/components/Item.js"></script>
+<script src="js/app/controllers/TopStoriesController.js"></script>
 <script src="js/app/controllers/PostController.js"></script>
+<script src="js/app/services/PostsService.js"></script>
 
 </body>
 </html>
