--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
   </head>
   <body>
 
-    CONTENT WILL GO HERE
+    <div ng-app="app" ng-strict-di>
+      <div ui-view></div>
+    </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-sanitize.js"></script>
     <script src="path/to/angular.js"></script>
     <script src="path/to/angular-sanitize.js"></script>
+
   </body>
 </html>
