continue building out posts

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
       <div ui-view></div>
     </div>
 
+    <script src="js/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-sanitize.js"></script>
-    <script src="path/to/angular.js"></script>
-    <script src="path/to/angular-sanitize.js"></script>
+    <script src="lib/angular-ui-router.js"></script>
+    <script src="js/app/app.js"></script>
+    <script src="js/app/controllers/TopStoriesController.js"></script>
+    <script src="js/app/controllers/PostController.js"></script>
+    <script src="js/app/services/PostsService.js"></script>
 
   </body>
 </html>
