--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   </head>
   <body>
 
-    <div ng-app="app" ng-strict-di>
+    <div ng-app="app">
       <div ui-view></div>
     </div>
 
     <script src="js/angular.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-sanitize.js"></script>
-    <script src="lib/angular-ui-router.js"></script>
-    <script src="js/app/app.js"></script>
-    <script src="js/app/controllers/TopStoriesController.js"></script>
-    <script src="js/app/controllers/PostController.js"></script>
-    <script src="js/app/services/PostsService.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/angular-ui-router.js"></script>
+    <script src="js/angular-sanitize.js"></script>
+    <script src="js/controllers/TopStoriesController.js"></script>
+    <script src="js/controllers/PostController.js"></script>
+    <script src="js/services/PostService.js"></script>
 
   </body>
 </html>
