--- a/index.html
+++ b/index.html
@@ -4,15 +4,32 @@
 	<meta charset="utf-8">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Hacker News Clone</title>
+	<title>HackerNews</title>
 
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
+	<div ng-app="app" class="app">
+		<header class="header">
+			<div class="header__fixed">
+				<ul>
+					<li>
+						<a ui-sref="top">Hacker News</a>
+					</li>
+				</ul>
+			</div>
+		</header>
+		<div ui-view></div>
+	</div>
 
-<script src="js/angular.min.js"></script>
-<script src="js/angular-ui-router.js"></script>
-<script src="js/angular-sanitize.js"></script>
-<script src="js/app/app.js"></script>
+
+		<script src="js/angular.js"></script>
+		<script src="js/angular-ui-router.js"></script>
+		<script src="js/angular-sanitize.js"></script>
+		<script src="js/app/app.js"></script>
+		<script src="js/app/controllers/TopStoriesController.js"></script>
+		<script src="js/app/controllers/PostController.js"></script>
+		<script src="js/app/services/TopStoriesService.js"></script>
+		<script src="js/app/components/item.js"></script>
 </body>
 </html>
