--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="js/angular-sanitize.js"></script>
     <script src="js/controllers/TopStoriesController.js"></script>
     <script src="js/controllers/PostController.js"></script>
+    <script src="js/services/PostsService.js"></script>
     <script src="js/services/PostService.js"></script>
 
   </body>
