--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="js/app.js"></script>
     <script src="js/angular-ui-router.js"></script>
     <script src="js/angular-sanitize.js"></script>
+    <script src="js/components/Comment.js"></script>
     <script src="js/controllers/TopStoriesController.js"></script>
     <script src="js/controllers/PostController.js"></script>
     <script src="js/services/PostsService.js"></script>
