--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Angular Application</title>
+	<title>Hacker News</title>
 
-    <link rel="stylesheet" href="app.css" />
+	<link rel="stylesheet" href="app.css" />
 </head>
+
 <body>
-hello world!
-<script src="js/angular.js"></script>
-<script src="js/angular-ui-router.js"></script>
-<script src="js/app/app.js"></script>
+	<div ng-app="app" class="app">
+		<header class="header">
+			<div class="header__fixed">
+				<ul>
+					<li>
+						<a ui-sref="top">Hacsker News</a>
+					</li>
+				</ul>
+			</div>
+		</header>
+		<div ui-views></div>
+	</div>
+
+	<script src="js/angular.js"></script>
+	<script src="js/angular-ui-router.js"></script>
+	<script src="js/app/app.js"></script>
 </body>
+
 </html>
