--- a/index.html
+++ b/index.html
@@ -5,36 +5,50 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Angular Application</title>
     <link rel="stylesheet" href="app.css" />
+
+		<style>
+			body {
+				font-family: Verdana, Geneva, sans-serif;
+			}
+
+			td {
+				background-color: rgb(255, 102, 0);
+			}
+
+			td a {
+				color: black;
+				font-size: 10pt;
+				text-decoration: none;
+			}
+
+		</style>
+
+
 </head>
 <body>
+	<tbody><tr><td bgcolor="#ff6600"><table border="0" cellpadding="0" cellspacing="0" width="100%" style="padding:2px"><tbody><tr>
+                  <td style="line-height:12pt; height:10px;"><span class="pagetop"><b class="hnname"><a href="/#/top">Hacker News</a></b>
 
-	    <div>
-	        <div ng-app="app" ng-controller="MainController as main">
-						<ul ng-repeat="story in main.stories | limitTo: limit:start " >
-							<li> Title: {{story.title}} </li>
-							<li> By: {{story.by}} </li>
-							<li> Link: {{story.url }} </li>
-							<li> Score: {{story.score}} </li>
-							<li> Comments: {{story.descendants}} </li>
-						</ul>
-						<br>
-						<button ng-disabled="start == 0" ng-click="decrement()">previous</button>
-						<button ng-disabled="start >= main.stories.length - 30" ng-click="increment()">next</button>
+                          </span></td>
+              </tr></tbody></table></td></tr></tbody>
 
-					</div>
-
+		<div ng-app="app" class="app">
+			<div ui-view>
 			</div>
-
-
-
-
-	    <script src="js/angular.js"></script>
+		</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.5.8/angular-sanitize.js"></script>
+	    <!-- <script src="js/angular.js"></script> -->
 	    <script src="js/angular-route.js"></script>
+			<script src="js/angular-ui-router.js"></script>
 	    <script src="js/app/app.js"></script>
 	    <script src="js/app/controllers/MainController.js"></script>
+			<script src="js/app/controllers/CommentController.js"></script>
 			<script src="js/app/services/StoryService.js"></script>
 			<script src="js/app/services/IndividualStoryService.js"></script>
 			<script src="js/app/filters/ResultFilter.js"></script>
+			<script src="js/app/components/usercomment.js"></script>
+			<script src="js/app/controllers/IndividualStoryController.js"></script>
 
 </body>
 </html>
