--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 
 	<div class="app" ng-app="app">
-		<a href="" ui-sref="top-stories">Go to the Top Stories</a>
+		<a href="" ui-sref="top" ui-sref-active="active">Top Stories</a>
 
-		<a href="" ui-sref="post">Go to the posts!</a>
+		<!--	 <a ui-sref="post">Go to the posts!</a> -->
 
 		<div ui-view></div>
 	</div>
