--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html>
-<head>
-	<meta charset="utf-8">
+  <head>
+  	<meta charset="utf-8">
 
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Angular Application</title>
+  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Angular Hacker News API</title>
 
     <link rel="stylesheet" href="app.css" />
-</head>
-<body>
 
-</body>
+  </head>
+
+  <body>
+
+    <script src="js/angular.min.js"></script>
+    <script src="js/angular-ui-router.js"></script>
+    <script src="js/angular-sanitize.js"></script>
+    <script src="js/app/app.js"></script>
+
+  </body>
 </html>
