--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <script src="js/app/app.js"></script>
     <script src="js/app/services/TopStoriesService.js"></script>
     <script src="js/app/controllers/TopStoriesController.js"></script>
+    <script src="js/app/directives/Story.js"></script>
+
 
   </body>
 </html>
