--- a/index.html
+++ b/index.html
@@ -12,18 +12,23 @@
 
   <body>
 
-  <div ng-app="app">
-    <div ui-view></div>
+  <div id="wrapper">
 
+    <div ng-app="app">
+      <div ui-view></div>
+
+    </div>
   </div>
 
     <script src="js/angular.min.js"></script>
     <script src="js/angular-ui-router.js"></script>
     <script src="js/angular-sanitize.js"></script>
+    <script src="node_modules/angular-utils-pagination/dirPagination.js"></script>
     <script src="js/app/app.js"></script>
     <script src="js/app/services/TopStoriesService.js"></script>
     <script src="js/app/controllers/TopStoriesController.js"></script>
     <script src="js/app/directives/Story.js"></script>
+
 
 
   </body>
