storycomment component setup

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <script src="js/app/services/TopStoriesService.js"></script>
     <script src="js/app/controllers/TopStoriesController.js"></script>
     <script src="js/app/directives/Story.js"></script>
+    <script src="js/app/components/StoryComment.js"></script>
+
 
 
 
