added getTime and getDomainUrl filters

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <script src="js/app/controllers/TopStoriesController.js"></script>
     <script src="js/app/directives/Story.js"></script>
     <script src="js/app/components/StoryComment.js"></script>
+    <script src="js/app/filters/getDomainUrl.js"></script>
+    <script src="js/app/filters/getTime.js"></script>
 
 
 
