Added top stories and posts routes, services, and controllers files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 
     <link rel="stylesheet" href="app.css" />
 </head>
-<body>
+<body ng-app="app" class="app">
+	<div >
+		<div ui-view></div>
+  </div>
+
+  <script src="js/angular.js"></script>
+	<script src="js/angular-ui-router.js"></script>
+	<script src="js/angular-sanitize.min.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/app/controllers/TopStoriesController.js"></script>
+	<script src="js/app/services/PostsService.js"></script>
 
 </body>
 </html>
