--- a/index.html
+++ b/index.html
@@ -2,13 +2,30 @@
 <html>
 <head>
 	<meta charset="utf-8">
-
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<link rel="stylesheet" href="app.css" />
+
 	<title>Angular Application</title>
 
-    <link rel="stylesheet" href="app.css" />
 </head>
-<body>
+<body ng-app="app" class="app">
+
+	<div class="header">
+		<div class="header__fixed">
+			<a ui-sref="top" ui-sref-active="active">Top Stories</a>
+		</div>
+	</div>
+
+	<div ui-view></div>
+
+	<script src="js/angular.js"></script>
+	<script src="js/angular-ui-router.js"></script>
+	<script src="js/angular-sanitize.min.js"></script>
+  <script src="js/app/app.js"></script>
+	<script src="js/app/components/item.js"></script>
+	<script src="js/app/controllers/topstoriescontroller.js"></script>
+ 	<script src="js/app/controllers/postcontroller.js"></script>
+  <script src="js/app/services/topstoriesservice.js"></script>
 
 </body>
 </html>
