Added notes.md and added a few minor details to the top stories template

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 		<header class="header">
 			<div class="header__fixed">
         <ul>
+					<li>
+            <a >Flatiron News</a>
+          </li>
           <li>
             <a ui-sref="top" ui-sref-active="active">Top Stories</a>
           </li>
         </ul>
       </div>
 		</header>
-		
+
 		<div ui-view></div>
   </div>
 
