--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 </head>
 <body>
 		<div ng-app="app">
-			<div ng-controller="MyCtrl">
+			<div ng-controller="NewsCtrl">
 				{{ text }}
 			</div>
 
 		</div>
 	  <script src="js/angular.js"></script>
+		<script src="js/app/app.js"></script>
+		<script src="js/app/controllers/NewsCtrl.js"></script>
 		<script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
+		<script src="js/app/services/NewsService.js"></script>
 </body>
 </html>
