start building ui-router and state

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	  <script src="js/angular.js"></script>
 		<script src="js/app/app.js"></script>
 		<script src="js/app/controllers/NewsCtrl.js"></script>
+		<script src="js/angular-ui-router.js"></script>
 		<script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
 		<script src="js/app/services/NewsService.js"></script>
 </body>
