--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 </head>
 <body>
 		<div ng-app="app">
-			<div ng-controller="NewsCtrl as ctrl">
-				{{ text }}
-				<div ui-view></div>
-			</div>
+			<a href="#/top">Top stories</a>
+			<!-- <div ng-controller="NewsCtrl as ctrl"> -->
+				<!-- {{ text }} -->
 
+			<!-- </div> -->
+			<div ui-view></div>
 		</div>
 	  <script src="js/angular.js"></script>
 		<script src="js/app/app.js"></script>
 		<script src="js/app/controllers/NewsCtrl.js"></script>
 		<script src="js/angular-ui-router.js"></script>
-		<script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
+		<!-- <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script> -->
 		<script src="js/app/services/NewsService.js"></script>
 </body>
 </html>
