--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	  <script src="js/angular.js"></script>
 		<script src="js/app/app.js"></script>
 		<script src="js/app/controllers/NewsCtrl.js"></script>
+		<script src="js/app/controllers/PostCtrl.js"></script>
+		<script src="js/app/components/Story.js"></script>
 		<script src="js/angular-ui-router.js"></script>
 		<!-- <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script> -->
 		<script src="js/app/services/NewsService.js"></script>
