--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<script src="js/app/controllers/NewsCtrl.js"></script>
 		<script src="js/app/controllers/PostCtrl.js"></script>
 		<script src="js/app/components/Story.js"></script>
+		<script src="js/app/components/Comment.js"></script>
 		<script src="js/angular-ui-router.js"></script>
 		<!-- <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script> -->
 		<script src="js/app/services/NewsService.js"></script>
