--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html ng-app="app">
 <head>
 	<meta charset="utf-8">
 
@@ -9,6 +9,30 @@
     <link rel="stylesheet" href="app.css" />
 </head>
 <body>
+
+  <div>
+    <header class="header">
+      <div class="header__fixed">
+        <ul>
+          <li>
+            <a ui-sref="top" ui-sref-active="active">Top Stories</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+
+    <div ui-view></div>
+  </div>
+
+  <script src="js/angular.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.1/angular-sanitize.min.js"></script>
+  <script src="js/angular-ui-router.min.js"></script>
+  <script src="js/app/app.js"></script>
+  <script src="js/app/components/Item.js"></script>
+  <script src="js/app/controllers/TopPostsController.js"></script>
+  <script src="js/app/controllers/PostController.js"></script>
+  <script src="js/app/services/PostsService.js"></script>
+
 
 </body>
 </html>
