--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 </head>
 <body>
 
+	<div class="app" ng-app="app">
+	<a href="" ui-sref='stories'>Top Stories</a>
+	<div ui-view></div>
+
+	</div>
+
 </body>
 </html>
