--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 <body>
 
 	<div class="app" ng-app="app">
-	<a href="" ui-sref='stories'>Top Stories</a>
-	<div ui-view></div>
+		<a ui-sref='top'>Top Stories</a>
+		<div ui-view></div>
 
 	</div>
 
+	<script src="js/angular.js"></script>
+	<script src="js/angular-ui-router.min.js"></script>
+	<script src="js/app/app.js"></script>
+	<script src="js/app/controllers/PostsController.js"></script>
+	<script src="js/app/controllers/TopStoriesController.js"></script>
+	<script src="js/app/services/PostsService.js"></script>
 </body>
 </html>
