--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 	<script src="js/angular.js"></script>
 	<script src="js/angular-ui-router.min.js"></script>
 	<script src="js/app/app.js"></script>
-	<script src="js/app/controllers/PostsController.js"></script>
+	<script src="js/app/controllers/PostController.js"></script>
 	<script src="js/app/controllers/TopStoriesController.js"></script>
 	<script src="js/app/services/PostsService.js"></script>
+	<script src="js/app/components/Item.js"></script>
 </body>
 </html>
