--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div ng-app="app" class="app">
 		<div>
 			<h1>Slacker News</h1>
-			<a href="" ui-sref="top">Top Stories</a>
+			<!-- <a href="" ui-sref="top">Top Stories</a> -->
 		</div>
 		<div ui-view></div>
 	</div>
