working on single post view

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<script src="js/angular-ui-router.js"></script>
 	<script src="js/app/app.js"></script>
 	<script src="js/app/controllers/TopStoriesController.js"></script>
+	<script src="js/app/controllers/StoryController.js"></script>
 	<script src="js/app/services/StoriesService.js"></script>
 </body>
 </html>
