--- a/index.html
+++ b/index.html
@@ -11,19 +11,27 @@
 <body>
 
 	<div ng-app="app" class="app">
-		<div>
-			<h1>Slacker News</h1>
-			<!-- <a href="" ui-sref="top">Top Stories</a> -->
-		</div>
+		<header class="header">
+			<div class="header__fixed">
+				<ul>
+					<li>
+						<a ui-sref="top">Slacker News</a>
+					</li>
+				</ul>
+			</div>
+		</header>
+
 		<div ui-view></div>
 	</div>
 
 
 	<script src="js/angular.js"></script>
 	<script src="js/angular-ui-router.js"></script>
+	<script src="js/angular-sanitize.js"></script>
 	<script src="js/app/app.js"></script>
 	<script src="js/app/controllers/TopStoriesController.js"></script>
 	<script src="js/app/controllers/StoryController.js"></script>
+	<script src="js/app/components/Comment.js"></script>
 	<script src="js/app/services/StoriesService.js"></script>
 </body>
 </html>
